--- a/index.html
+++ b/index.html
@@ -87,9 +87,27 @@
                                 غذای اصلی
                         </button>                     
                     </div>
+                    <div class="middle-images flex">
+                        <img src="/images/about.png" alt="">
+                    </div>
                 </div>
-                
-            </section>          
+            </section>    
+            <!-- <section class="end">
+                <div class="branches flex">
+                    <div class="box-Branch">
+                        <img src="/images/branch-3.png" alt="">
+                    </div>
+                    <div class="box-Branch">
+                        <img src="/images/branch-2.png" alt="">
+                    </div>
+                    <div class="box-Branch">
+                        <img src="/images/branch-1.png" alt="">
+                    </div>
+                    <div class="box-Branch">
+                        <img src="/images/branch-1.png" alt="">
+                    </div>
+                </div>
+            </section>       -->
         </header>
     </main>
 </body>
